Fix #20 Remove spacing beneath description fields

--- a/less/course.less
+++ b/less/course.less
@@ -84,3 +84,7 @@ a.dimmed {
         .grayscale(100%);
     }
 }
+
+.no-overflow {
+    margin-bottom: 0;
+}
